wunderground-graphql/deployment.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: wunderground-graphql
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: wunderground-graphql
    spec:
      containers:
      - name: wunderground-graphql
        image: nateinaction/wunderground-graphql:latest
        ports:
        - containerPort: 3000
